Добавил описание, массу, вкус, цену и ссылку на заказ

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -56,7 +56,22 @@
                 />
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy PRO 500 г</h3>
+                  <div class="catalog-card__content-description">
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Масса</span>
+                      <span class="catalog-card__quantity-item">500 г</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Вкус</span>
+                      <span class="catalog-card__quantity-item">Курица</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Цена</span>
+                      <span class="catalog-card__quantity-item">700 ₽</span>
+                    </p>
+                  </div>
                 </div>
+                <a href="#" class="catalog-card__link button">Заказать</a>
               </article>
             </li>
             <li class="catalog__list-item">
@@ -70,7 +85,22 @@
                 />
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy PRO 1000 г</h3>
+                  <div class="catalog-card__content-description">
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Масса</span>
+                      <span class="catalog-card__quantity-item">1000 г</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Вкус</span>
+                      <span class="catalog-card__quantity-item">Курица</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Цена</span>
+                      <span class="catalog-card__quantity-item">1000 ₽</span>
+                    </p>
+                  </div>
                 </div>
+                <a href="#" class="catalog-card__link button">Заказать</a>
               </article>
             </li>
             <li class="catalog__list-item">
@@ -84,7 +114,22 @@
                 />
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy PRO 500 г</h3>
+                  <div class="catalog-card__content-description">
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Масса</span>
+                      <span class="catalog-card__quantity-item">500 г</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Вкус</span>
+                      <span class="catalog-card__quantity-item">Рыба</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Цена</span>
+                      <span class="catalog-card__quantity-item">700 ₽</span>
+                    </p>
+                  </div>
                 </div>
+                <a href="#" class="catalog-card__link button">Заказать</a>
               </article>
             </li>
             <li class="catalog__list-item">
@@ -98,7 +143,22 @@
                 />
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy PRO 1000 г</h3>
+                  <div class="catalog-card__content-description">
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Масса</span>
+                      <span class="catalog-card__quantity-item">1000 г</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Вкус</span>
+                      <span class="catalog-card__quantity-item">Рыба</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Цена</span>
+                      <span class="catalog-card__quantity-item">1000 ₽</span>
+                    </p>
+                  </div>
                 </div>
+                <a href="#" class="catalog-card__link button">Заказать</a>
               </article>
             </li>
             <li class="catalog__list-item">
@@ -112,7 +172,22 @@
                 />
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy slim 500 г</h3>
+                  <div class="catalog-card__content-description">
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Масса</span>
+                      <span class="catalog-card__quantity-item">500 г</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Вкус</span>
+                      <span class="catalog-card__quantity-item">Гречка</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Цена</span>
+                      <span class="catalog-card__quantity-item">400 ₽</span>
+                    </p>
+                  </div>
                 </div>
+                <a href="#" class="catalog-card__link button">Заказать</a>
               </article>
             </li>
             <li class="catalog__list-item">
@@ -126,7 +201,51 @@
                 />
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy slim 1000 г</h3>
+                  <div class="catalog-card__content-description">
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Масса</span>
+                      <span class="catalog-card__quantity-item">1000 г</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Вкус</span>
+                      <span class="catalog-card__quantity-item">Гречка</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Цена</span>
+                      <span class="catalog-card__quantity-item">700 ₽</span>
+                    </p>
+                  </div>
                 </div>
+                <a href="#" class="catalog-card__link button">Заказать</a>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="catalog-card">
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-6-mobile.png"
+                  width="84"
+                  height="100"
+                  alt="упоковка продуктка"
+                />
+                <div class="catalog-card__description">
+                  <h3 class="catalog-card__heading">Cat Energy slim 1000 г</h3>
+                  <div class="catalog-card__content-description">
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Масса</span>
+                      <span class="catalog-card__quantity-item">500 г</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Вкус</span>
+                      <span class="catalog-card__quantity-item">Рис</span>
+                    </p>
+                    <p class="catalog-card__quantity">
+                      <span class="catalog-card__quantity-item">Цена</span>
+                      <span class="catalog-card__quantity-item">500 ₽</span>
+                    </p>
+                  </div>
+                </div>
+                <a href="#" class="catalog-card__link button">Заказать</a>
               </article>
             </li>
             <li class="catalog__list-item">
@@ -140,23 +259,36 @@
                 />
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy slim 500 г</h3>
+                  <p class="catalog-card__quantity">
+                    На самом деле вкусов гораздо больше!
+                  </p>
                 </div>
+                <a href="#" class="catalog-card__link button">Заказать</a>
               </article>
             </li>
-            <li class="catalog__list-item">
-              <article class="catalog-card">
+            <li class="catalog__list-item catalog__list-item--show-more">
+              <article class="catalog-card catalog-card--show-more">
                 <img
-                  class="catalog-card__image"
+                  class="catalog-card__image catalog-card__image--show-more"
                   src="./img/catalog-show-more.svg"
                   width="30"
                   height="30"
                   alt="показать ещё"
                 />
-                <div class="catalog-card__description">
-                  <h3 class="catalog-card__heading">
+                <div
+                  class="catalog-card__description catalog-card__description--show-more"
+                >
+                  <h3
+                    class="catalog-card__heading catalog-card__heading--show-more"
+                  >
                     Показать еще 100500 товаров
                   </h3>
                 </div>
+                <a
+                  href="#"
+                  class="catalog-card__link catalog-card__link--show-more button"
+                  >Показать все</a
+                >
               </article>
             </li>
           </ul>
