--- a/src/catalog.html
+++ b/src/catalog.html
@@ -294,6 +294,65 @@
           </ul>
         </div>
       </section>
+
+      <section class="additional-products">
+        <div class="additional-products__wrapper">
+          <h2 class="additional-products__title">Дополнительные товары</h2>
+          <ul class="additional-product__list">
+            <li class="additional-product__item">
+              <article class="additional-product-card">
+                <h3 class="additional-product-card__heading">
+                  Сахарозаменитель
+                </h3>
+                <div class="additional-product-card__quantity">
+                  <p class="additional-product-card__quantity-item">
+                    1 упаковка (100 г)
+                  </p>
+                  <p class="additional-product-card__quantity-item">200 ₽</p>
+                </div>
+                <a class="additional-product-card__button" href="#">Заказать</a>
+              </article>
+            </li>
+            <li class="additional-product-list__item">
+              <article class="additional-product-card">
+                <h3 class="additional-product-card__heading">Питьевая вода</h3>
+                <div class="additional-product-card__quantity">
+                  <p class="additional-product-card__quantity-item">5 литров</p>
+                  <p class="additional-product-card__quantity-item">50 ₽</p>
+                </div>
+                <a class="additional-product-card__button" href="#">Заказать</a>
+              </article>
+            </li>
+            <li class="additional-product-list__item">
+              <article class="additional-product-card">
+                <h3 class="additional-product-card__heading">Молоко</h3>
+                <div class="additional-product-card__quantity">
+                  <p class="additional-product-card__quantity-item">1 литр</p>
+                  <p class="additional-product-card__quantity-item">100 ₽</p>
+                </div>
+                <a class="additional-product-card__button" href="#">Заказать</a>
+              </article>
+            </li>
+            <li class="additional-product-list__item">
+              <article class="additional-product-card">
+                <h3 class="additional-product-card__heading">Витамины</h3>
+                <div class="additional-product-card__quantity">
+                  <p class="additional-product-card__quantity-item">
+                    1 упаковка (30 г)
+                  </p>
+                  <p class="additional-product-card__quantity-item">300 ₽</p>
+                </div>
+                <a class="additional-product-card__button" href="#">Заказать</a>
+              </article>
+            </li>
+          </ul>
+          <div class="additional-product__gift">
+            <p class="additional-product__git-text">
+              Закажите все и получите чехол для кота в подарок!
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
