--- a/src/form.html
+++ b/src/form.html
@@ -5,5 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Подбор программы</title>
   </head>
-  <body></body>
+  <body>
+    <header class="main-header">
+      <div class="main-header__wrapper">
+        <a class="main-header__link" href="index.html">
+          <img
+            class="main-header__image"
+            src="./img/logo-icon-mobile.svg"
+            width="33"
+            height="38"
+            alt="Кэт энерджи"
+          />
+        </a>
+        <nav class="main-header__nav main-nav">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a href="index.html" class="main-nav__link">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="catalog.html" class="main-nav__link"
+                >Каталог продукции</a
+              >
+            </li>
+            <li class="main-nav__item">
+              <a href="form.html" class="main-nav__link">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
