Сверстал секцию Контактные данные

--- a/src/form.html
+++ b/src/form.html
@@ -117,6 +117,40 @@
             </div>
           </div>
         </section>
+
+        <section class="contact-details">
+          <div class="contact-details__wrapper">
+            <h2 class="contact-details__title">
+              Контактные данные (владельца кота)
+            </h2>
+
+            <div class="contact-details__container-text">
+              <label
+                class="contact-details__label-text label-text label-text--email"
+                for="email"
+                >E-mail:*<input
+                  class="label-text__input-text label-text__input-text--email"
+                  id="email"
+                  name="Почта"
+                  placeholder="kuklachev@gmail.com"
+                  value="kuklachev@gmail.com"
+                  required
+                />
+              </label>
+              <label
+                class="contact-details__label-text label-text label-text--phone"
+                for="phone"
+                >Телефон:*<input
+                  class="label-text__input-text label-text__input-text--phone"
+                  id="phone"
+                  name="Телефон"
+                  placeholder="8 (960) 900-60-90"
+                  value="8 (960) 900-60-90"
+                  required
+              /></label>
+            </div>
+          </div>
+        </section>
       </form>
     </main>
   </body>
