Добавил модификаторы подписям полей

--- a/src/form.html
+++ b/src/form.html
@@ -50,30 +50,36 @@
             </p>
 
             <div class="cat-inforamtion__container-text">
-              <label for="name" class="cat-information__label-text label-text"
+              <label
+                for="name"
+                class="cat-information__label-text label-text label-text--name"
                 >Имя:*
                 <input
-                  class="label-text__input-text"
+                  class="label-text__input-text label-text__input-text--name"
                   id="name"
                   name="Имя"
                   placeholder="Барсик"
                   value="Барсик"
                   required
               /></label>
-              <label for="weight" class="cat-information__label-text label-text"
+              <label
+                for="weight"
+                class="cat-information__label-text label-text label-text--weight"
                 >Вес (кг):*
                 <input
-                  class="label-text__input-text"
+                  class="label-text__input-text label-text__input-text--weight"
                   id="weight"
                   name="Вес"
                   placeholder="7"
                   value="7"
                   required
               /></label>
-              <label for="age" class="cat-information__label-text label-text"
+              <label
+                for="age"
+                class="cat-information__label-text label-text label-text--age"
                 >Возраст (лет):
                 <input
-                  class="label-text__input-text"
+                  class="label-text__input-text label-text__input-text--age"
                   id="age"
                   name="Возраст"
                   placeholder="7"
@@ -85,9 +91,9 @@
             <div class="cat-information__container-radio">
               <label
                 for="weight-loss"
-                class="cat-information__label-radio label-radio"
+                class="cat-information__label-radio label-radio label-radio--weight-loss"
                 ><input
-                  class="label-radio__input-radio"
+                  class="label-radio__input-radio label-radio__input-radio--weight-loss"
                   id="weight-loss"
                   type="radio"
                   name="program"
@@ -96,7 +102,7 @@
               >
               <label
                 for="weight-gain"
-                class="cat-information__label-radio label-radio"
+                class="cat-information__label-radio label-radio label-radio--weight-gain"
                 ><input
                   class="label-radio__input-radio"
                   id="weight-gain"
@@ -106,9 +112,9 @@
               >
               <label
                 for="your-advice"
-                class="cat-information__label-radio label-radio"
+                class="cat-information__label-radio label-radio label-radio--your-advice"
                 ><input
-                  class="label-radio__input-radio"
+                  class="label-radio__input-radio label-radio__input-radio--your-advice"
                   id="your-advice"
                   type="radio"
                   name="program"
