--- a/src/form.html
+++ b/src/form.html
@@ -124,7 +124,7 @@
           </div>
         </section>
 
-        <section class="contact-details">
+        <section class="main-form__contact-details contact-details">
           <div class="contact-details__wrapper">
             <h2 class="contact-details__title">
               Контактные данные (владельца кота)
@@ -155,6 +155,22 @@
                   required
               /></label>
             </div>
+          </div>
+        </section>
+
+        <section class="main-form__comment comment">
+          <div class="comment__wrapper">
+            <h2 class="comment__title">Комментарий</h2>
+            <textarea
+              class="comment__textarea"
+              name="Коммментарий"
+              id=""
+              cols="30"
+              rows="10"
+              required
+            >
+Расскажите обо всех повадках кота</textarea
+            >
           </div>
         </section>
       </form>
