Приступил к верстке секции дополнительно, добавил чекбоксы

--- a/src/form.html
+++ b/src/form.html
@@ -51,8 +51,8 @@
 
             <div class="cat-inforamtion__container-text">
               <label
-                for="name"
                 class="cat-information__label-text label-text label-text--name"
+                for="name"
                 >Имя:*
                 <input
                   class="label-text__input-text label-text__input-text--name"
@@ -63,8 +63,8 @@
                   required
               /></label>
               <label
-                for="weight"
                 class="cat-information__label-text label-text label-text--weight"
+                for="weight"
                 >Вес (кг):*
                 <input
                   class="label-text__input-text label-text__input-text--weight"
@@ -75,8 +75,8 @@
                   required
               /></label>
               <label
-                for="age"
                 class="cat-information__label-text label-text label-text--age"
+                for="age"
                 >Возраст (лет):
                 <input
                   class="label-text__input-text label-text__input-text--age"
@@ -90,8 +90,8 @@
 
             <div class="cat-information__container-radio">
               <label
-                for="weight-loss"
                 class="cat-information__label-radio label-radio label-radio--weight-loss"
+                for="weight-loss"
                 ><input
                   class="label-radio__input-radio label-radio__input-radio--weight-loss"
                   id="weight-loss"
@@ -101,8 +101,8 @@
                 />Похудение</label
               >
               <label
-                for="weight-gain"
                 class="cat-information__label-radio label-radio label-radio--weight-gain"
+                for="weight-gain"
                 ><input
                   class="label-radio__input-radio"
                   id="weight-gain"
@@ -111,8 +111,8 @@
                 />Набор массы</label
               >
               <label
-                for="your-advice"
                 class="cat-information__label-radio label-radio label-radio--your-advice"
+                for="your-advice"
                 ><input
                   class="label-radio__input-radio label-radio__input-radio--your-advice"
                   id="your-advice"
@@ -171,6 +171,59 @@
             >
 Расскажите обо всех повадках кота</textarea
             >
+          </div>
+        </section>
+
+        <section class="main-form__additional additional">
+          <div class="additional__wrapper">
+            <h2 class="additional__title">Дополнительно</h2>
+            <div class="additional__container-checkbox">
+              <label
+                class="additional__label-checkbox label-checkbox label-checkbox--sweetener"
+                for="sweetener"
+                ><input
+                  class="label-checkbox__input-checkbox"
+                  type="checkbox"
+                  id="sweetener"
+                  name="Сахарозаменитель"
+                  required
+                  checked
+                />Сахарозаменитель</label
+              >
+              <label
+                class="additional__label-checkbox label-checkbox label-checkbox--drinking-water"
+                for="drinking-water"
+                ><input
+                  class="label-checkbox__input-checkbox"
+                  type="checkbox"
+                  id="drinking-water"
+                  name="Питьевая вода"
+                  required
+                />Питьевая вода</label
+              >
+              <label
+                class="additional__label-checkbox label-checkbox label-checkbox--milk"
+                for="milk"
+                ><input
+                  class="label-checkbox__input-checkbox"
+                  type="checkbox"
+                  id="milk"
+                  name="Молоко"
+                  required
+                />Молоко</label
+              >
+              <label
+                class="additional__label-checkbox label-checkbox label-checkbox--vitamins"
+                for="vitamins"
+                ><input
+                  class="label-checkbox__input-checkbox"
+                  type="checkbox"
+                  id="vitamins"
+                  name="Витамины"
+                  required
+                />Витамины</label
+              >
+            </div>
           </div>
         </section>
       </form>
