Сверстал секцию дополнительно, добавил кнопку отправки и текст

--- a/src/form.html
+++ b/src/form.html
@@ -224,6 +224,12 @@
                 />Витамины</label
               >
             </div>
+            <div class="additional__container-submit">
+              <button class="additional__button-submit" type="submit">
+                Отправить заявку
+              </button>
+              <p class="additional__required-text">* — Обязательные поля</p>
+            </div>
           </div>
         </section>
       </form>
