Создал components и utils

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,7 +2,6 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Каталог продукции</title>
   </head>
@@ -249,8 +248,8 @@
                 <a href="#" class="catalog-card__link button">Заказать</a>
               </article>
             </li>
-            <li class="catalog__list-item">
-              <article class="catalog-card">
+            <li class="catalog__list-item catalog__list-item--show-more">
+              <article class="catalog-card catalog-card--show-more">
                 <img
                   class="catalog-card__image"
                   src="./img/catalog/catalog-7-mobile.png"
