Приступил к секции виды програм, добавил кнопке стрелку, стилизовал шрифты

--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,34 @@
               деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
               сбросить лишний вес.
             </p>
-            <a class="porgram-type__link" href="#">Каталог slim</a>
+            <a class="program-type__link" href="#"
+              >Каталог slim
+              <svg
+                width="32"
+                height="12"
+                viewBox="0 0 32 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g id="icon_arrow">
+                  <g id="icon">
+                    <line
+                      id="Line 1"
+                      y1="6"
+                      x2="18"
+                      y2="6"
+                      stroke="black"
+                      stroke-width="2"
+                    />
+                    <path
+                      id="Polygon 1"
+                      d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z"
+                      fill="black"
+                    />
+                  </g>
+                </g>
+              </svg>
+            </a>
           </div>
           <div
             class="program-types__program program-type program-type--weight-gain"
@@ -129,7 +156,34 @@
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat
               Energy Pro поможет вашему коту нарастить необходимые мышцы!
             </p>
-            <a class="porgram-type__link" href="#">Каталог pro</a>
+            <a class="program-type__link" href="#"
+              >Каталог pro
+              <svg
+                width="32"
+                height="12"
+                viewBox="0 0 32 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g id="icon_arrow">
+                  <g id="icon">
+                    <line
+                      id="Line 1"
+                      y1="6"
+                      x2="18"
+                      y2="6"
+                      stroke="black"
+                      stroke-width="2"
+                    />
+                    <path
+                      id="Polygon 1"
+                      d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z"
+                      fill="black"
+                    />
+                  </g>
+                </g>
+              </svg>
+            </a>
           </div>
         </div>
       </section>
