--- a/source/index.html
+++ b/source/index.html
@@ -364,10 +364,11 @@
 
       <section class="location">
         <div class="location__wrapper">
+          <h2 class="visually-hidden">Приглашение и локация</h2>
           <div class="location__invation">
-            <h2 class="location__invation-title">
+            <h3 class="location__invation-title">
               приглашаем к сотрудничеству дилеров!
-            </h2>
+            </h3>
             <div class="location__place">
               <address class="location__address">
                 <p class="location__address-text">
