Добавил класс visually-hidden соц. сетям в футере

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -399,7 +399,8 @@
         <ul class="main-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link"
-              >Вконтакте<svg
+              ><span class="visually-hidden">Вконтакте</span
+              ><svg
                 width="29"
                 height="22"
                 viewBox="0 0 29 22"
@@ -428,7 +429,8 @@
           </li>
           <li class="social__item">
             <a href="#" class="social__link"
-              >Ютуб<svg
+              ><span class="visually-hidden">Ютуб</span
+              ><svg
                 width="29"
                 height="22"
                 viewBox="0 0 29 22"
@@ -447,7 +449,7 @@
           </li>
           <li class="social__item">
             <a href="#" class="social__link"
-              >Телегам
+              ><span class="visually-hidden">Телеграм</span>
               <svg
                 width="29"
                 height="22"
