--- a/source/index.html
+++ b/source/index.html
@@ -407,7 +407,8 @@
         <ul class="main-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link"
-              >Вконтакте<svg
+              ><span class="visually-hidden">Вконтакте</span
+              ><svg
                 width="29"
                 height="22"
                 viewBox="0 0 29 22"
@@ -436,7 +437,8 @@
           </li>
           <li class="social__item">
             <a href="#" class="social__link"
-              >Ютуб<svg
+              ><span class="visually-hidden">Ютуб</span
+              ><svg
                 width="29"
                 height="22"
                 viewBox="0 0 29 22"
@@ -455,7 +457,7 @@
           </li>
           <li class="social__item">
             <a href="#" class="social__link"
-              >Телегам
+              ><span class="visually-hidden">Телеграм</span>
               <svg
                 width="29"
                 height="22"
