Стилизовал шрифты в карточках

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -283,6 +283,9 @@
                   >
                     Показать еще 100500 товаров
                   </h3>
+                  <p class="catalog-card__text">
+                    На самом деле вкусов гораздо больше!
+                  </p>
                 </div>
                 <a
                   href="#"
