Стилизовал шрифты в секции дополнительные товары

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -313,7 +313,9 @@
                   </p>
                   <p class="additional-product-card__quantity-item">200 ₽</p>
                 </div>
-                <a class="additional-product-card__button" href="#">Заказать</a>
+                <a class="additional-product-card__button button" href="#"
+                  >Заказать</a
+                >
               </article>
             </li>
             <li class="additional-product-list__item">
@@ -323,7 +325,9 @@
                   <p class="additional-product-card__quantity-item">5 литров</p>
                   <p class="additional-product-card__quantity-item">50 ₽</p>
                 </div>
-                <a class="additional-product-card__button" href="#">Заказать</a>
+                <a class="additional-product-card__button button" href="#"
+                  >Заказать</a
+                >
               </article>
             </li>
             <li class="additional-product-list__item">
@@ -333,7 +337,9 @@
                   <p class="additional-product-card__quantity-item">1 литр</p>
                   <p class="additional-product-card__quantity-item">100 ₽</p>
                 </div>
-                <a class="additional-product-card__button" href="#">Заказать</a>
+                <a class="additional-product-card__button button" href="#"
+                  >Заказать</a
+                >
               </article>
             </li>
             <li class="additional-product-list__item">
@@ -345,7 +351,9 @@
                   </p>
                   <p class="additional-product-card__quantity-item">300 ₽</p>
                 </div>
-                <a class="additional-product-card__button" href="#">Заказать</a>
+                <a class="additional-product-card__button button" href="#"
+                  >Заказать</a
+                >
               </article>
             </li>
           </ul>
