Закончил верстку в каталоге

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,7 +39,9 @@
     </header>
 
     <main class="main-container">
-      <h1 class="main-container__title">Каталог продукции</h1>
+      <h1 class="main-container__title main-container__title--catalog">
+        Каталог продукции
+      </h1>
 
       <section class="catalog">
         <div class="catalog__wrapper">
