--- a/source/form.html
+++ b/source/form.html
@@ -39,7 +39,9 @@
     </header>
 
     <main class="main-container">
-      <h1 class="main-container__title">Подбор программы</h1>
+      <h1 class="main-container__title main-container__title--form">
+        Подбор программы
+      </h1>
 
       <form class="main-form" action="#" method="post">
         <section class="main-form__cat-information cat-information">
