Добавил стили в секции дополнительно

--- a/source/form.html
+++ b/source/form.html
@@ -227,7 +227,7 @@
               >
             </div>
             <div class="additional__container-submit">
-              <button class="additional__button-submit" type="submit">
+              <button class="additional__button-submit button" type="submit">
                 Отправить заявку
               </button>
               <p class="additional__required-text">* — Обязательные поля</p>
