--- a/source/form.html
+++ b/source/form.html
@@ -236,10 +236,10 @@
         </section>
       </form>
 
-      <section class="location location--grey">
+      <section class="location">
         <div class="location__wrapper">
           <h2 class="visually-hidden">Приглашение и локация</h2>
-          <div class="location__invation">
+          <div class="location__invation location__invation--grey">
             <h3 class="location__invation-title">
               приглашаем к сотрудничеству дилеров!
             </h3>
