--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
             alt="Кэт энерджи"
           />
         </a>
-        <nav class="main-header__nav main-nav main-nav--closed">
+        <nav class="main-header__nav main-nav main-nav--closed-">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
