--- a/source/index.html
+++ b/source/index.html
@@ -18,21 +18,25 @@
             alt="Кэт энерджи"
           />
         </a>
-        <nav class="main-header__nav main-nav main-nav--closed">
+        <nav class="main-header__nav main-nav main-nav--opened">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a href="index.html" class="main-nav__link">Главная</a>
+              <a href="index.html" class="main-nav__link main-nav__link--line"
+                >Главная</a
+              >
             </li>
             <li class="main-nav__item">
-              <a href="catalog.html" class="main-nav__link"
+              <a href="catalog.html" class="main-nav__link main-nav__link--line"
                 >Каталог продукции</a
               >
             </li>
             <li class="main-nav__item">
-              <a href="form.html" class="main-nav__link">Подбор программы</a>
+              <a href="form.html" class="main-nav__link main-nav__link--line"
+                >Подбор программы</a
+              >
             </li>
           </ul>
         </nav>
