Стилизовал моб. меню, без js и с js

--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
             alt="Кэт энерджи"
           />
         </a>
-        <nav class="main-header__nav main-nav main-nav--opened">
+        <nav class="main-header__nav main-nav main-nav--nojs main-nav--closed">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
@@ -514,5 +514,7 @@
         </a>
       </div>
     </footer>
+
+    <script src="./script.js"></script>
   </body>
 </html>
