Стилизовал верхнюю линию у первой ссылки

--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,9 @@
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a href="index.html" class="main-nav__link main-nav__link--line"
+              <a
+                href="index.html"
+                class="main-nav__link main-nav__link--first-line main-nav__link--line"
                 >Главная</a
               >
             </li>
