--- a/source/index.html
+++ b/source/index.html
@@ -55,17 +55,17 @@
               Функциональное питание для котов
             </h2>
             <p class="nutrition__text">Занялся собой? Займись котом!</p>
-            <a class="nutrition__link button" href="form.html"
-              >Подобрать программу</a
-            >
           </div>
-          <img
+          <a class="nutrition__link button" href="form.html"
+            >Подобрать программу</a
+          >
+          <!-- <img
             class="nutrition__image"
             src="./img/nutrition-package-mobile.png"
             width="280"
             height="270"
             alt="Упоковка питании"
-          />
+          /> -->
         </div>
       </section>
 
