--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
 
       <section class="program-type">
         <ul class="program-type__list">
-          <li class="progam-type__item program-type__item--loss">
+          <li class="program-type__item program-type__item--loss">
             <h2 class="program-type__title">Похудение</h2>
             <p class="program-type__text">
               Ваш кот весит больше собаки и почти утратил способность лазить по
