Выровнил стрелки в кнопках, закончил стилизацию в виды програм

--- a/source/index.html
+++ b/source/index.html
@@ -71,7 +71,9 @@
               деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
               сбросить лишний вес.
             </p>
-            <a class="program-type__link" href="#">Каталог slim </a>
+            <a class="program-type__link program-type__link--loss" href="#"
+              >Каталог slim
+            </a>
           </li>
           <li class="program-type__item program-type__item--gain">
             <h2 class="program-type__title">Набор массы</h2>
@@ -79,7 +81,9 @@
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat
               Energy Pro поможет вашему коту нарастить необходимые мышцы!
             </p>
-            <a class="program-type__link" href="#">Каталог pro </a>
+            <a class="program-type__link program-type__link--gain" href="#"
+              >Каталог pro
+            </a>
           </li>
         </ul>
       </section>
