--- a/source/index.html
+++ b/source/index.html
@@ -126,8 +126,8 @@
           <p class="living-example__text">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
             Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
-            этом он не менял своих привычек и по-прежнему спит по 16 часов в
-            день.
+            этом он не менял своих привычек и по-прежнему спит по 16 часов
+            <br />в день.
           </p>
           <dl class="living-example__list">
             <div class="living-example__item">
