Стилизовал 2 контейнера, вес и дни

--- a/source/index.html
+++ b/source/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="living-example__item">
               <dt class="living-example__item-heading">60 дней</dt>
-              <dd class="living-example__item-text">снижение веса</dd>
+              <dd class="living-example__item-text">затрачено времени</dd>
             </div>
           </dl>
           <div class="living-example__result">
